bad/assign_binop_neq_class.example_compiler_output
ERROR
[1mbad/assign_binop_neq_class.lat:6:15: [1;31merror: [0;1mleft side is not assignable[m
	null == null = new Y;
	             [1;32m^[m
[1mbad/assign_binop_neq_class.lat:6:2: [1;34mnote: [0;1mleft side starts here[m
	null == null = new Y;
	[1;32m^[m
